--- a/mandoc.css
+++ b/mandoc.css
@@ -73,7 +73,7 @@ div[role=doc-pagefooter] {
 .foot-left {	flex: 1; }
 .foot-date {	flex: 0 1 auto;
 		text-align: center; }
-.foot-os {	flex: 1;
+.foot-right {	flex: 1;
 		text-align: right; }
 
 /* Sections and paragraphs. */
